--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,7 +23,6 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          cd Doc
           uv pip install -r requirements.txt --system
 
       - name: Fetch gh-pages
@@ -31,30 +30,29 @@ jobs:
 
       - name: Build docs
         run: |
-          cd Doc
           sphinx-build -b html . build/html -a -j auto --keep-going
 
-      - name: Rename generated index.html
-        run: |
-          mv Doc/build/html/index.html Doc/build/html/indexcontent.html
+#       - name: Rename generated index.html
+#         run: |
+#           mv docs/build/html/index.html Doc/build/html/indexcontent.html
 
       - name: Create .nojekyll and index.html for redirection
         run: |
-          touch Doc/build/html/.nojekyll
-          echo "<!DOCTYPE HTML>
-          <html lang='en-US'>
-              <head>
-                  <title>Page Redirection</title>
-                  <meta charset='UTF-8'>
-                  <meta http-equiv='refresh' content='0; url=indexcontent.html'>
-                  <script type='text/javascript'>window.location.href = 'indexcontent.html'</script>
-              </head>
-              <body>
-                  You are being redirected. If this does not work, click <a href='indexcontent.html'>this link</a>
-              </body>
-          </html>" > Doc/build/html/index.html
+          touch docs/_build/html/.nojekyll
+#           echo "<!DOCTYPE HTML>
+#           <html lang='en-US'>
+#               <head>
+#                   <title>Page Redirection</title>
+#                   <meta charset='UTF-8'>
+#                   <meta http-equiv='refresh' content='0; url=indexcontent.html'>
+#                   <script type='text/javascript'>window.location.href = 'indexcontent.html'</script>
+#               </head>
+#               <body>
+#                   You are being redirected. If this does not work, click <a href='indexcontent.html'>this link</a>
+#               </body>
+#           </html>" > Doc/build/html/index.html
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: Doc/build/html
+          folder: docs/_build/html
